added service in space module and test, and findOne in services
